--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 serde_json = "1.0"
+log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
